fix: resolve critical security issues and tighten batch fault tolerance